Atualiza auditorias e documentação dos blocos 11-14
Inclui scripts e arquivos extras na árvore comentada, atualiza relatórios de auditoria dos blocos 11, 12 e 13 para refletir conformidade total, detalha correções e documentação de variáveis de ambiente, e adiciona scripts de validação e setup conforme implementação real. Corrige e expande métricas de conformidade e integrações entre scripts e ferramentas Go.

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,124 @@
-# MCP-HULK Environment Variables Example
+# ============================================
+# MCP-HULK - Arquivo de Variáveis de Ambiente
+# ============================================
+#
+# INSTRUÇÕES:
+# 1. Copie este arquivo para .env na raiz do projeto
+# 2. Preencha os valores conforme seu ambiente
+# 3. NUNCA commite o arquivo .env no Git (já está no .gitignore)
+#
+# Para documentação completa, consulte: docs/guides/env_variables_reference.md
+#
+# ============================================
+
+# --------------------------------------------
+# AMBIENTE
+# --------------------------------------------
+HULK_ENV=dev
+
+# --------------------------------------------
+# SERVIDOR HTTP
+# --------------------------------------------
+HULK_SERVER_PORT=8080
+HULK_SERVER_HOST=0.0.0.0
+HULK_SERVER_READ_TIMEOUT=30s
+HULK_SERVER_WRITE_TIMEOUT=30s
+
+# --------------------------------------------
+# BANCO DE DADOS (PostgreSQL)
+# --------------------------------------------
+HULK_DATABASE_HOST=localhost
+HULK_DATABASE_PORT=5432
+HULK_DATABASE_USER=postgres
+HULK_DATABASE_PASSWORD=change-me
+HULK_DATABASE_DATABASE=mcp_hulk
+HULK_DATABASE_SSL_MODE=disable
+HULK_DATABASE_MAX_CONNS=25
+HULK_DATABASE_MIN_CONNS=5
+
+# --------------------------------------------
+# IA (AI Provider)
+# --------------------------------------------
+HULK_AI_PROVIDER=glm
+HULK_AI_MODEL=glm-4.6-z.ai
+HULK_AI_API_KEY=change-me
+HULK_AI_ENDPOINT=https://api.z.ai/v1
+HULK_AI_TEMPERATURE=0.3
+HULK_AI_MAX_TOKENS=4000
+HULK_AI_TIMEOUT=60s
+
+# --------------------------------------------
+# CAMINHOS (Paths)
+# --------------------------------------------
+HULK_PATHS_TEMPLATES=./templates
+HULK_PATHS_OUTPUT=./output
+HULK_PATHS_DATA=./data
+HULK_PATHS_CACHE=./data/cache
+
+# --------------------------------------------
+# ENGINE (Motor de Execução)
+# --------------------------------------------
+HULK_ENGINE_WORKERS=auto
+HULK_ENGINE_QUEUE_SIZE=2000
+HULK_ENGINE_TIMEOUT=20s
+
+# --------------------------------------------
+# CACHE
+# --------------------------------------------
+HULK_CACHE_L1_SIZE=5000
+HULK_CACHE_L2_TTL=1h
+HULK_CACHE_L3_PATH=data/cache
+
+# --------------------------------------------
+# NATS (Messaging)
+# --------------------------------------------
+HULK_NATS_URLS=nats://localhost:4222
+HULK_NATS_USER=
+HULK_NATS_PASS=
+
+# --------------------------------------------
+# LOGGING
+# --------------------------------------------
+HULK_LOGGING_LEVEL=info
+HULK_LOGGING_FORMAT=json
+
+# --------------------------------------------
+# TELEMETRY (Observabilidade)
+# --------------------------------------------
+HULK_TELEMETRY_TRACING_ENABLED=true
+HULK_TELEMETRY_TRACING_EXPORTER=jaeger
+HULK_TELEMETRY_TRACING_ENDPOINT=http://localhost:4318/v1/traces
+HULK_TELEMETRY_METRICS_ENABLED=true
+
+# --------------------------------------------
+# MCP REGISTRY
+# --------------------------------------------
+HULK_MCP_REGISTRY_STORAGE_PATH=./registry
+HULK_MCP_REGISTRY_AUTO_SAVE=true
+HULK_MCP_REGISTRY_SAVE_INTERVAL=300
+HULK_MCP_REGISTRY_MAX_PROJECTS=1000
+HULK_MCP_REGISTRY_MAX_TEMPLATES=100
+HULK_MCP_REGISTRY_ENABLE_METRICS=true
+HULK_MCP_REGISTRY_CACHE_ENABLED=true
+HULK_MCP_REGISTRY_CACHE_TTL=3600
+
+# --------------------------------------------
+# MCP SERVER
+# --------------------------------------------
+HULK_MCP_SERVER_NAME=mcp-hulk
+HULK_MCP_SERVER_VERSION=1.0.0
+HULK_MCP_SERVER_PROTOCOL=2024-11-05
+HULK_MCP_SERVER_TRANSPORT=stdio
+HULK_MCP_SERVER_PORT=3000
+HULK_MCP_SERVER_HOST=localhost
+HULK_MCP_SERVER_MAX_WORKERS=10
+HULK_MCP_SERVER_TIMEOUT=30
+HULK_MCP_SERVER_ENABLE_AUTH=false
+HULK_MCP_SERVER_AUTH_TOKEN=
+
+# --------------------------------------------
+# FEATURE FLAGS
+# --------------------------------------------
+HULK_FEATURES_EXTERNAL_GPU=false
+HULK_FEATURES_AUDIT_LOGGING=false
+HULK_FEATURES_BETA_GENERATORS=false
